# flake-lock-diff

./: flake-lock-diff.cabal  flake.nix  treefmt.toml
.github/workflows/: check-for-updates.yaml  ci.yml
app/: Main.hs
