cabal-version: 2.4
name:          flake-lock-diff
version:       0.1.0.0
author:        Spencer Janssen
maintainer:    spencerjanssen@gmail.com

executable flake-lock-diff
  main-is:          Main.hs
  build-depends:
    , aeson
    , base    ^>=4.14.3.0
    , relude
    , text
    , time

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall
